<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_sky_blue"
    android:padding="@dimen/padding_13dp"
    tools:context=".presentation.ui.LoginFragment">

    <TextView
        android:id="@+id/welcome_back_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/login_fragment_welcome_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_horizontal_guideline1" />

    <TextView
        android:id="@+id/login_to_continue_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_9dp"
        android:fontFamily="@font/poppins"
        android:text="@string/login_fragment_subHeading"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_back_text_view" />


    <androidx.cardview.widget.CardView
        android:id="@+id/sign_up_with_google_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_29dp"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/radius_8dp"
        app:layout_constraintTop_toBottomOf="@+id/login_to_continue_text_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/google_logo_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_13dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:src="@drawable/all_google_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/signup_with_google_text_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signup_with_google_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_signup_with_google"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintBottom_toBottomOf="@+id/google_logo_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/google_logo_image_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/use_phone_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_fragment_use_phone"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_20dp"
        app:layout_constraintTop_toTopOf="@id/emailAddressLayout"
        app:layout_constraintEnd_toEndOf="@+id/emailAddressLayout"
         />


    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/emailAddressLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_default"
    android:hint="@string/email_address"
    android:textColorHint="@color/hex_grey"
    app:boxBackgroundColor="@color/deep_sky_blue"
    app:boxStrokeColor="@color/hex_grey"
    app:errorEnabled="true"
    app:helperTextEnabled="true"
    app:hintTextColor="@color/hex_grey"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/login_horizontal_guideline2" >

    <EditText
        android:id="@+id/enter_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textColor="@color/hex_grey"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@drawable/cursor_style_bg" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:textColorHint="@color/hex_grey"
        app:boxBackgroundColor="@color/deep_sky_blue"
        app:boxStrokeColor="@color/hex_grey"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:hintTextColor="@color/hex_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray">

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/hex_grey"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textCursorDrawable="@drawable/cursor_style_bg"
            tools:ignore="TextFields" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_29dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/poppins"
        android:enabled="false"
        android:text="@string/all_login"
        android:textAllCaps="false"
        android:textColor="@color/deep_sky_blue"
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />

    <TextView
        android:id="@+id/new_user_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/login_fragment_new_user"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@+id/login_vertical_guideline1"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/signup_free_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_9dp"
        android:fontFamily="@font/poppins"
        android:text="@string/login_fragment_signup_for_free"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/new_user_text_view"
        app:layout_constraintStart_toEndOf="@+id/new_user_text_view"
        app:layout_constraintTop_toTopOf="@+id/new_user_text_view" />

    <TextView
        android:id="@+id/forgot_password_small_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_22dp"
        android:fontFamily="@font/poppins"
        android:text="@string/all_forgot_password"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_user_text_view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_vertical_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20681265" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_horizontal_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3255814" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_horizontal_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.090287276" />

</androidx.constraintlayout.widget.ConstraintLayout>