<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_24dp"
    tools:context=".presentation.ui.NewPasswordFragment">

    <ImageView
        android:id="@+id/back_arrow_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_back_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/all_forgot_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_arrow_image_view"
        app:layout_constraintStart_toEndOf="@+id/back_arrow_image_view"
        app:layout_constraintTop_toTopOf="@+id/back_arrow_image_view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPassword_text_input_layout"
        android:layout_width="@dimen/size_0_dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/gray_6"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/forgot_password_horizontal_guideline1"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray_6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPassword_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/all_new_password"
            android:inputType="textPassword"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/enter_email_edit_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etConfirmPassword"
        android:layout_width="@dimen/size_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        app:boxStrokeColor="@color/gray_6"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword_text_input_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray_6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/reset_password_fragment_confirm_new_password"
            android:inputType="textPassword"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/enter_email_edit_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:backgroundTint="@color/deep_sky_blue"
        android:text="@string/all_reset_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
        tools:layout_editor_absoluteX="24dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_button">

        <TextView
            android:id="@+id/remember_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/all_i_can_remember_my_password"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/all_login"
            android:textColor="@color/deep_sky_blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/remember_password_text_view"
            app:layout_constraintStart_toEndOf="@+id/remember_password_text_view"
            app:layout_constraintTop_toTopOf="@+id/remember_password_text_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/forgot_password_horizontal_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12038304" />

</androidx.constraintlayout.widget.ConstraintLayout>